--- a/home.html
+++ b/home.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>後台管理</title>
-    <link rel="stylesheet" href="./stylesheeps/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./stylesheeps/all.css">
 </head>
 
 <body>
     <div class="d-flex">
         <aside class="sidebar vh-100 border-end d-flex flex-column ">
-            <div class="px-4 py-3"><strong>六角西餐廳</strong> - 後台管理</div>
+            <h1 class="px-4 py-3">
+                六角西餐廳 - <span class="fs-4">後台管理</span>
+            </h1>
 
-            <div class="overflow-auto ">
+            <nav class="overflow-auto ">
                 <a href="home.html" class="px-4 sidebar-link active"><i class="bi bi-house"></i> 首頁</a>
                 <a href="#menu" class="px-4  sidebar-link d-flex justify-content-between" data-bs-toggle="collapse">
                     <div><i class="bi bi-journal"></i> 訂單管理</div><i class="bi bi-caret-down"></i>
@@ -25,7 +27,7 @@
                     <a href="order.html" class="ps-5 sidebar-link "><i class="bi bi-journal"></i> 單一訂單細節</a>
                 </div>
                 <a href="#" class="px-4 sidebar-link "><i class="bi bi-link"></i> 相關連結</a>
-            </div>
+            </nav>
 
             <a href="#" class="mt-auto px-4 sidebar-link"><i class="bi bi-box-arrow-right"></i> 登出</a>
         </aside>
@@ -81,9 +83,10 @@
                     <div class="card-header bg-transparent">
                         <div class="input-group">
                             <span class="input-group-text border-0 bg-transparent pe-0">
-                                <i class="bi bi-search"></i>
+                                <label for="search"> <i class="bi bi-search"></i></label>
                             </span>
-                            <input type="search" placeholder="search" class="form-control border-0 shadow-none">
+                            <input type="search" placeholder="search" class="form-control border-0 shadow-none"
+                                id="search">
                         </div>
                     </div>
                     <div class="card-body p-0">
@@ -109,9 +112,75 @@
                                         <td>六角西餐:大麥克全家餐</td>
                                         <td>尚未付款</td>
                                         <td class="text-center">900</td>
-                                        <td> <a href="#" class="btn btn-sm btn-outline-dark me-2">編輯<i
-                                                    class="bi bi-pencil"></i></a>
+                                        <td>
+                                            <div class="btn-group btn-group-sm" role="group">
+                                                <a href="#" class="btn btn-outline-dark">編輯<i
+                                                        class="bi bi-pencil"></i></a>
 
+                                                <button class="btn btn-outline-dark dropdown-toggle " type="button"
+                                                    id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                                                    aria-expanded="false">
+                                                    操作
+                                                </button>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                    <li><a class="dropdown-item" href="#">修改狀態</a></li>
+                                                    <li><a class="dropdown-item text-danger" href="#"
+                                                            data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                                            data-bs-order-id="TX123456789">刪除訂單</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" class="ps-4">TX123456788</td>
+                                        <td>123@gmail.com</td>
+                                        <td>王小明</td>
+                                        <td>六角西餐:大麥克全家餐</td>
+                                        <td>尚未付款</td>
+                                        <td class="text-center">900</td>
+                                        <td>
+                                            <div class="btn-group btn-group-sm" role="group">
+                                                <a href="#" class="btn btn-outline-dark">編輯<i
+                                                        class="bi bi-pencil"></i></a>
+
+                                                <button class="btn btn-outline-dark dropdown-toggle " type="button"
+                                                    id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                                                    aria-expanded="false">
+                                                    操作
+                                                </button>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                    <li><a class="dropdown-item" href="#">修改狀態</a></li>
+                                                    <li><a class="dropdown-item text-danger" href="#"
+                                                            data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                                            data-bs-order-id="TX123456788">刪除訂單</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td scope="row" class="ps-4">TX123456787</td>
+                                        <td>123@gmail.com</td>
+                                        <td>王小明</td>
+                                        <td>六角西餐:大麥克全家餐</td>
+                                        <td>尚未付款</td>
+                                        <td class="text-center">900</td>
+                                        <td>
+                                            <div class="btn-group btn-group-sm" role="group">
+                                                <a href="#" class="btn btn-outline-dark">編輯<i
+                                                        class="bi bi-pencil"></i></a>
+
+                                                <button class="btn btn-outline-dark dropdown-toggle " type="button"
+                                                    id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                                                    aria-expanded="false">
+                                                    操作
+                                                </button>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                    <li><a class="dropdown-item" href="#">修改狀態</a></li>
+                                                    <li><a class="dropdown-item text-danger" href="#"
+                                                            data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                                            data-bs-order-id="TX123456787">刪除訂單</a></li>
+                                                </ul>
+                                            </div>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -136,6 +205,26 @@
                                 </li>
                             </ul>
                         </nav>
+                    </div>
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">刪除訂單</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p> 確認刪除「<span id="deleteId"> </span> 」的訂單</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">取消</button>
+                                <button type="button" class="btn btn-danger">確認刪除</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
