--- a/layout.html
+++ b/layout.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>後台管理</title>
-    <link rel="stylesheet" href="./stylesheeps/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./stylesheeps/all.css">
 </head>
 
 <body>
     <div class="d-flex">
         <aside class="sidebar vh-100 border-end d-flex flex-column ">
-            <div class="px-4 py-3"><strong>六角西餐廳</strong> - 後台管理</div>
+            <h1 class="px-4 py-3">
+                六角西餐廳 - <span class="fs-4">後台管理</span>
+            </h1>
 
-            <div class="overflow-auto ">
+            <nav class="overflow-auto ">
                 <a href="home.html" class="px-4 sidebar-link active"><i class="bi bi-house"></i> 首頁</a>
                 <a href="#menu" class="px-4  sidebar-link d-flex justify-content-between" data-bs-toggle="collapse">
                     <div><i class="bi bi-journal"></i> 訂單管理</div><i class="bi bi-caret-down"></i>
@@ -25,7 +27,7 @@
                     <a href="order.html" class="ps-5 sidebar-link "><i class="bi bi-journal"></i> 單一訂單細節</a>
                 </div>
                 <a href="#" class="px-4 sidebar-link "><i class="bi bi-link"></i> 相關連結</a>
-            </div>
+            </nav>
 
             <a href="#" class="mt-auto px-4 sidebar-link"><i class="bi bi-box-arrow-right"></i> 登出</a>
         </aside>
