--- a/order.html
+++ b/order.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>後台管理</title>
-    <link rel="stylesheet" href="./stylesheeps/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./stylesheeps/all.css">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#order-list" data-bs-offset="80">
     <div class="d-flex">
         <aside class="sidebar vh-100 border-end d-flex flex-column ">
-            <div class="px-4 py-3"><strong>六角西餐廳</strong> - 後台管理</div>
+            <h1 class="px-4 py-3">
+                六角西餐廳 - <span class="fs-4">後台管理</span>
+            </h1>
 
-            <div class="overflow-auto ">
+            <nav class="overflow-auto ">
                 <a href="home.html" class="px-4 sidebar-link "><i class="bi bi-house"></i> 首頁</a>
                 <a href="#menu" class="px-4  sidebar-link d-flex justify-content-between" data-bs-toggle="collapse">
                     <div><i class="bi bi-journal"></i> 訂單管理</div><i class="bi bi-caret-down"></i>
@@ -25,7 +27,7 @@
                     <a href="order.html" class="ps-5 sidebar-link active"><i class="bi bi-journal"></i> 單一訂單細節</a>
                 </div>
                 <a href="#" class="px-4 sidebar-link "><i class="bi bi-link"></i> 相關連結</a>
-            </div>
+            </nav>
 
             <a href="#" class="mt-auto px-4 sidebar-link"><i class="bi bi-box-arrow-right"></i> 登出</a>
         </aside>
@@ -50,7 +52,9 @@
                     </div>
                     <div class="col-lg-9">
                         <div class="card mb-3 shadow-sm" id="card-summary">
-                            <div class="card-header bg-secondary"><strong>摘要</strong> </div>
+                            <h2 class="card-header bg-secondary fs-4">
+                                摘要
+                            </h2>
                             <div class="card-body">
                                 <dl class="row mb-0">
                                     <dt class="col-3">訂單編號</dt>
@@ -65,7 +69,9 @@
                             </div>
                         </div>
                         <div class="card mb-3 shadow-sm" id="card-detail">
-                            <div class="card-header bg-secondary"><strong>購買品項</strong> </div>
+                            <h2 class="card-header bg-secondary fs-4">
+                                購買品項
+                            </h2>
                             <div class="card-body p-0">
                                 <div class="table-responsive">
                                     <table class="table  table-hover mb-0 text-nowrap align-middle">
@@ -93,6 +99,19 @@
                                                     <div class="btn-group">
                                                         <a href="#" class="btn btn-sm btn-outline-dark">編輯<i
                                                                 class="bi bi-pencil"></i></a>
+
+                                                        <button class="btn btn-outline-dark dropdown-toggle btn-sm"
+                                                            type="button" id="dropdownMenuButton1"
+                                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                                            操作
+                                                        </button>
+                                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                            <li><a class="dropdown-item" href="#">修改狀態</a></li>
+                                                            <li><a class="dropdown-item text-danger" href="#"
+                                                                    data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                                                    data-bs-order-id="p1234567">刪除訂單</a></li>
+                                                        </ul>
+
                                                     </div>
                                                 </td>
                                             </tr>
@@ -107,6 +126,19 @@
                                                     <div class="btn-group">
                                                         <a href="#" class="btn btn-sm btn-outline-dark">編輯<i
                                                                 class="bi bi-pencil"></i></a>
+
+                                                        <button class="btn btn-outline-dark dropdown-toggle btn-sm"
+                                                            type="button" id="dropdownMenuButton1"
+                                                            data-bs-toggle="dropdown" aria-expanded="false">
+                                                            操作
+                                                        </button>
+                                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                            <li><a class="dropdown-item" href="#">修改狀態</a></li>
+                                                            <li><a class="dropdown-item text-danger" href="#"
+                                                                    data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                                                    data-bs-order-id="p1234566">刪除訂單</a></li>
+                                                        </ul>
+
                                                     </div>
                                                 </td>
                                             </tr>
@@ -130,7 +162,9 @@
                             </div>
                         </div>
                         <div class="card mb-3 shadow-sm" id="card-invoice">
-                            <div class="card-header bg-secondary"><strong>發票管理</strong> </div>
+                            <h2 class="card-header bg-secondary fs-4">
+                                發票管理
+                            </h2>
                             <div class="card-body">
                                 <div class="row mb-3">
                                     <label class="col-lg-3 col-form-label" for="select">發票類型</label>
@@ -156,35 +190,55 @@
                             </div>
                         </div>
                         <div class="card shadow-sm" id="card-danger">
-                            <div class="card-header bg-secondary"><strong>危險操作</strong> </div>
+                            <h2 class="card-header bg-secondary fs-4">
+                                危險操作
+                            </h2>
                             <div class="card-body">
                                 <div class="row align-items-center g-3">
                                     <div class="col-lg-3"><button type="button"
                                             class="btn btn-outline-dark w-100">退款</button>
                                     </div>
                                     <div class="col-lg-9">
-                                        退還用戶款項
+                                        <p>退還用戶款項</p>
                                     </div>
                                     <div class="col-lg-3"><button type="button"
                                             class="btn btn-outline-dark w-100">折讓</button>
                                     </div>
                                     <div class="col-lg-9">
-                                        針對已開立的訂單退還部分款項
+                                        <p>針對已開立的訂單退還部分款項</p>
                                     </div>
                                     <div class="col-lg-3"><button type="button"
                                             class="btn btn-outline-danger w-100">刪除訂單</button>
                                     </div>
                                     <div class="col-lg-9">
-                                        將訂單刪除，並移除相關訂單資訊
+                                        <p>將訂單刪除，並移除相關訂單資訊</p>
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
 
                     </div>
 
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">刪除訂單</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p> 確認刪除「<span id="deleteId"> </span> 」的訂單</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-outline-dark" data-bs-dismiss="modal">取消</button>
+                                <button type="button" class="btn btn-danger">確認刪除</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
