--- a/orders.html
+++ b/orders.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>後台管理</title>
-    <link rel="stylesheet" href="./stylesheeps/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./stylesheeps/all.css">
 </head>
 
 <body>
     <div class="d-flex">
         <aside class="sidebar vh-100 border-end d-flex flex-column ">
-            <div class="px-4 py-3"><strong>六角西餐廳</strong> - 後台管理</div>
+            <h1 class="px-4 py-3">
+                六角西餐廳 - <span class="fs-4">後台管理</span>
+            </h1>
 
-            <div class="overflow-auto ">
+            <nav class="overflow-auto ">
                 <a href="home.html" class="px-4 sidebar-link "><i class="bi bi-house"></i> 首頁</a>
                 <a href="#menu" class="px-4  sidebar-link d-flex justify-content-between" data-bs-toggle="collapse">
                     <div><i class="bi bi-journal"></i> 訂單管理</div><i class="bi bi-caret-down"></i>
@@ -25,7 +27,7 @@
                     <a href="order.html" class="ps-5 sidebar-link "><i class="bi bi-journal"></i> 單一訂單細節</a>
                 </div>
                 <a href="#" class="px-4 sidebar-link "><i class="bi bi-link"></i> 相關連結</a>
-            </div>
+            </nav>
 
             <a href="#" class="mt-auto px-4 sidebar-link"><i class="bi bi-box-arrow-right"></i> 登出</a>
         </aside>
@@ -74,9 +76,10 @@
                                 </ul>
                             </div>
                             <span class="input-group-text border-0 bg-transparent pe-0">
-                                <i class="bi bi-search"></i>
+                                <label for="search"> <i class="bi bi-search"></i></label>
                             </span>
-                            <input type="search" placeholder="search" class="form-control border-0 shadow-none">
+                            <input type="search" placeholder="search" class="form-control border-0 shadow-none"
+                                id="search">
                         </div>
                     </div>
                     <div class="card-body p-0">
@@ -119,7 +122,6 @@
                                                     <li><a class="dropdown-item text-danger" href="#"
                                                             data-bs-toggle="modal" data-bs-target="#deleteModal"
                                                             data-bs-order-id="TX123456789">刪除訂單</a></li>
-
                                                 </ul>
 
                                             </div>
@@ -258,15 +260,7 @@
             </div>
         </main>
     </div>
-    <script>
-        const deleteModal = document.querySelector('#deleteModal');
-        deleteModal.addEventListener('show.bs.modal', function (e) {
-            let btn = e.relatedTarget;
-            let text = btn.dataset.bsOrderId;
-            const deleteIdText = document.querySelector('#deleteId')
-            deleteIdText.textContent = text;
-        })
-    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
